--- a/src/main/webapp/WEB-INF/province/create.html
+++ b/src/main/webapp/WEB-INF/province/create.html
@@ -1,30 +1,22 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="/layout :: head">
-    <title>CreateCustomer</title>
+    <title>Create Province</title>
 </head>
 <body>
-<h3>Add Customer</h3>
+<h3>Add Province</h3>
 <p>
-    <a th:href="@{/customers}">
-        Back to customer list
+    <a th:href="@{/provinces}">
+        Back to province list
     </a>
 </p>
 <div id="form">
-    <form th:action="@{/customers/save}" th:object="${customer}"
+    <form th:action="@{/provinces/create}" th:object="${province}"
           method="POST" novalidate="novalidate">
         <input type="hidden" th:field="*{id}"/>
         <div>
             <label for="name">Name</label>
             <input type="text" id="name" th:field="*{name}"/>
-        </div>
-        <div>
-            <label for="email">Email</label>
-            <input type="email" id="email" th:field="*{email}"/>
-        </div>
-        <div>
-            <label for="address">Address</label>
-            <input type="text" id="address" th:field="*{address}"/>
         </div>
         <input type="submit" value="Save"/>
     </form>
